[tool.poetry]
name = "atcoder_codes"
version = "0.1.0"
description = "project for atcoder practice"
authors = ["zaemon1251-hesty <hisakawa1251@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
online-judge-tools = "^11.5.1"
numpy = "^1.22.2"
numba = "^0.57.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"
pyproject-flake8 = "^6.0.0.post1"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.1"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = 'google.cloud.*'
ignore_missing-imports = true

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 200
max-complexity = 18
ignore = "E203,E266,W503,E402,E741"
max-doc-length = 1000

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
